TAG: qcreports_db-6-0-11-18
DATE: 12/05/2017
STAFF: sc,lec
TR12684 remove date column from GXD_Triage report
TR12730/QTL_Triage.py changes

TAG: qcreports_db-6-0-11-17
DATE: 11/30/2017
STAFF: lec
1) TR12678/MRK_GOIEA.py ; MRK_NoGO.py
2) TR12681 qcr.shtml - add link in references section to pdfdownload missed 
    papers log

TAG: qcreports_db-6-0-11-16
TAG: qcreports_db-6-0-11-15
DATE: 11/08/2017
STAFF: lec
TR12693/mgd/MRK_GOIEA.py, MRK_NoGO.py: link jfileurl -> pdfurl

TAG: qcreports_db-6-0-11-14
DATE: 11/07/2017
STAFF: sc
CHANGES: TR12607 exclude cre transgene refs from GO QC 14

TAG: qcreports_db-6-0-11-12
TAG: qcreports_db-6-0-11-11
TAG: qcreports_db-6-0-11-10
TAG: qcreports_db-6-0-11-9
TAG: qcreports_db-6-0-11-8
TAG: qcreports_db-6-0-11-6
TAG: qcreports_db-6-0-11-5
TAG: qcreports_db-6-0-11-4
TAG: qcreports_db-6-0-11-3
TAG: qcreports_db-6-0-11-2
TAG: qcreports_db-6-0-11-1
DATE: 10/04/2017
STAFF: lec 
TR12250/Lit Triage
qcr.shtml : added link to littriageload/error file

WF_AP_NewAlleleNomenTag.py  
WF_AP_NewDiseaseModelTag.py  
WF_AP_Routed.py

GXD_References.sql
GXD_Triage.sql

MRK_AllNoGO.py 
MRK_GOUnknown.sql
MRK_GOIEA.py

GXD_Triage.sql
GXD_References.sql

TAG: qcreports_db-6-0-10-6
DATE: 08/03/2017
STAFF: lec 
qcr.shtml/VOC_DOObsolete.sql

TAG: qcreports_db-6-0-10-5
DATE: 05/17/2017
STAFF: lec 
mgd/ALL_CellLineProvider.sql

TAG: qcreports_db-6-0-10-4
DATE: 05/08/2017
STAFF: lec 
TR12540/DO (Disease Ontology)
weekly/VOC_OMIMGenotypeNoMapDO.py : obsolete

TAG: qcreports_db-6-0-10-3
DATE: 05/4/2017
STAFF: sc
CHANGES: TR12573
1) added mgd/BIB_DupPM_DOI.sql

TAG: qcreports_db-6-0-10-2
TAG: qcreports_db-6-0-10-1
DATE: 04/27/2017
STAFF: lec 
TR12540/DO (Disease Ontology)
ALL_OMIMNoMP.py renamed ALL_DONoMP.py
VOC_OMIMDOMult.py ; add genotypes
VOC_OMIMObsolete.sql renamed VOC_DOObsolete.sql
ALL_Progress.py : remove OMIM
change OMIM annotations to DO annotations:
GO_Combined_Report.py
MRK_GOUnknown.sql
MRK_GOIEA.py
GXD_OrphanGenotype.sql
PRB_StrainNonStd.sql
