@@ -1,3 +1,8 @@
+TAG: qcreports_db-6-0-11-1?
+DATE: 12/05/2017
+STAFF: lec
+TR12682/weekly/BIB_StatusMismatch_GXD.sql
+
 TAG: qcreports_db-6-0-11-18
 DATE: 12/05/2017
 STAFF: sc,lec
